Fix issue with pagination overlapping body text

--- a/craft/templates/elements/components/posts/_posts.scss
+++ b/craft/templates/elements/components/posts/_posts.scss
@@ -103,7 +103,7 @@
   // Body
 
   &_body {
-
+    position: relative;
   }
 
 
